--- a/invoice_report/views/report_invoice_with_payments.xml
+++ b/invoice_report/views/report_invoice_with_payments.xml
@@ -2,16 +2,16 @@
     <data>
         <!-- Define el informe -->
         <report
-            id="invoice_report.report_invoice_with_payments"
+            id="invoice_report.infopro"
             model="account.move"
             string="Invoice Report with Payments"
             report_type="qweb-pdf"
-            file="invoice_report_with_payments"
-            name="invoice_report.report_invoice_with_payments"
+            file="infopro"
+            name="invoice_report.infopro"
         />
 
         <!-- Define la plantilla del informe -->
-        <template id="report_invoice_with_payments">
+        <template id="infopro">
             <t t-call="web.html_container">
                 <t t-foreach="docs" t-as="o">
                     <style>
