--- a/invoice_report/views/report_invoice_with_payments.xml
+++ b/invoice_report/views/report_invoice_with_payments.xml
@@ -38,7 +38,7 @@
                                 </div>
                                 <div class="d-flex justify-content-start col row">
                                     <t t-if="o.ei_is_valid and o.ei_qr_data">
-                                        <img t-att-src="ei_qr" alt="QR Code"/>
+                                        <t t-esc="ei_qr"/>
                                     </t>
 
                                     <div class="col">
