--- a/invoice_report/views/report_invoice_with_payments.xml
+++ b/invoice_report/views/report_invoice_with_payments.xml
@@ -41,7 +41,7 @@
                                         <p><strong>NIT: </strong> <t t-esc="o.company_id.vat"/></p>
                                         <p><strong>Tipo de organización: </strong> <t t-esc="o.company_id.type_organization_id"/> </p>
                                         <p><strong>Tipo de regimén: </strong> <t t-esc="o.company_id.type_regime_id"/></p>
-                                        <p><strong>Tipo de responsabilidad: </strong> <t t-esc="o.company_id.liabilty_id"/></p>
+                                        <p><strong>Tipo de responsabilidad: </strong> <t t-esc="o.company_id.liability_id"/></p>
                                         <p><strong>Tipo de operación: </strong> <t t-esc="o.ei_operation"/></p>
                                         <p>Factura Electrónica de Venta <strong style="font-size: 20px"> <t t-esc="o.name"/> </strong></p>
                                     </div>
