--- a/invoice_report/views/report_invoice_with_payments.xml
+++ b/invoice_report/views/report_invoice_with_payments.xml
@@ -134,11 +134,13 @@
                                                 <td>Total sin retenciones</td>
                                                 <td><t t-esc="o.ei_amount_total_no_withholding"/></td>
                                             </tr>
-                                            <t t-foreach="tax_totals['subtotales']" t-as="subtotal">
-                                                <tr>
-                                                    <td><t t-esc="subtotal['name']"/></td>
-                                                    <td><t t-esc="subtotal['formatted_amount']"/></td>
-                                                </tr>
+                                            <t t-if="tax_totals and 'subtotals' in tax_totals">
+                                                <t t-foreach="tax_totals['subtotals']" t-as="subtotal">
+                                                    <tr>
+                                                        <td><t t-esc="subtotal['name']"/></td>
+                                                        <td><t t-esc="subtotal['formatted_amount']"/></td>
+                                                    </tr>
+                                                </t>
                                             </t>
                                             <tr>
                                                 <td><t t-esc="amount_by_group['tax_group_name']"/></td>
