--- a/invoice_report/views/report_invoice_with_payments.xml
+++ b/invoice_report/views/report_invoice_with_payments.xml
@@ -167,10 +167,12 @@
                                                     </tr>
                                                 </t>
                                             </t>
-                                            <tr>
-                                                <td>Importe adeudado</td>
-                                                <td><t t-esc="o.amount_residual"/></td>
-                                            </tr>
+                                            <t t-if="o.amount_residual">
+                                                <tr>
+                                                    <td>Importe adeudado</td>
+                                                    <td><t t-esc="o.amount_residual"/></td>
+                                                </tr>
+                                            </t>
                                         </tbody>
                                     </table>
                                 </div>
