--- a/invoice_report/views/report_invoice_with_payments.xml
+++ b/invoice_report/views/report_invoice_with_payments.xml
@@ -159,8 +159,8 @@
                                                     </t>
                                                 </td>
                                             </tr>
-                                            <t t-if="o.payments_vals">
-                                                <t t-foreach="o.payments_vals" t-as="payment">
+                                            <t t-if="payments_vals">
+                                                <t t-foreach="payments_vals" t-as="payment">
                                                     <tr>
                                                         <td><t t-esc="payment['payment_date']"/></td>
                                                         <td><t t-esc="payment['payment_amount']"/></td>
