--- a/invoice_report/views/report_invoice_with_payments.xml
+++ b/invoice_report/views/report_invoice_with_payments.xml
@@ -54,133 +54,160 @@
                             </div>
                         </div>
 
-                        <div class="d-flex justify-content-start col row">
-                            <div class="col-4">
-                                <p style="margin: 0px;">NIT: <t t-esc="o.partner_id.vat"/></p>
-                                <p style="margin: 0px;"><t t-esc="o.partner_id.name"/></p>
-                                <p style="margin: 0px;"><t t-esc="o.partner_id.street"/></p>
-                                <p style="margin: 0px;"><t t-esc="o.partner_id.phone"/></p>
-                                <p style="margin: 0px;"><t t-esc="o.partner_id.email"/></p>
-                            </div>
-                            <div class="col-8 row">
-                                <div class="col">
-                                    <strong>Fecha de emisión:</strong>
-                                    <p><t t-esc="o.ei_issue_datetime"/></p>
-                                </div>
-                                <div class="col">
-                                    <strong>Fecha de expedición:</strong>
-                                    <p><t t-esc="o.ei_expedition_date"/></p>
-                                </div>
-                                <div class="col">
-                                    <strong>Fecha de vencimiento:</strong>
-                                    <p><t t-esc="o.invoice_date_due"/></p>
-                                </div>
-                                <div class="col">
-                                    <strong>Forma de pago:</strong>
-                                    <p><t t-esc="o.payment_form_id.name"/></p>
-                                </div>
-                            </div>
-                        </div>
+                        <div class="container-fluid">
+                            <div class="d-flex justify-content-start row" style="height: 150px;">
+                                <t t-esc="res_company.logo_web"/>
 
-                        <div class="col row">
-                            <table class="table">
-                                <thead>
-                                    <tr>
-                                        <th scope="col">#</th>
-                                        <th scope="col">Descripcion</th>
-                                        <th scope="col">Cantidad</th>
-                                        <th scope="col">Precio Unitario</th>
-                                        <th scope="col">Impuestos</th>
-                                        <th scope="col">Importe</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <t t-foreach="o.invoice_line_ids" t-as="line">
-                                        <tr>
-                                            <th><t t-esc="line.sequence"/></th>
-                                            <td><t t-esc="line.name"/></td>
-                                            <td><t t-esc="line.quantity"/></td>
-                                            <td><t t-esc="line.price_unit"/></td>
-                                            <td>
-                                                <t t-foreach="line.tax_ids" t-as="tax">
-                                                    <p><t t-esc="tax.name"/></p>
-                                                </t>
-                                            </td>
-                                            <td><t t-esc="line"/></td>
-                                        </tr>
-                                    </t>
-                                </tbody>
-                            </table>
-                        </div>
-
-                        <div class="col row">
-                            <div class="col-7 fs-6">
-                                <strong>Las retenciones son solo a nivel informativo.</strong>
-                                <p><strong>Número de autorización de facturación: </strong> <t t-esc="o.resolution_id.resolution_resolution"/></p>
-                                <p><strong>Fecha: </strong> <t t-esc="o.resolution_id.resolution_resolution_date"/></p>
-                                <p><strong>Rango autorizado desde: </strong> <t t-esc="o.resolution_id.resolution_prefix"/> <t t-esc="o.resolution_id.resolution_from"/> <strong> a </strong> <t t-esc="o.resolution_id.resolution_prefix"/> <t t-esc="o.resolution_id.resolution_to"/></p>
-                                <p><strong>Válido desde: </strong> <t t-esc="o.resolution_id.resolution_date_from"/> <strong> a </strong> <t t-esc="o.resolution_id.resolution_date_to"/></p>
-                                <strong>Representación gráfica de facturación electrónica impresa por computador con software propio por <t t-esc="o.company_id.business_name"/></strong>
+                                <div class="d-flex justify-content-start col row">
+                                    <div class="col-4">
+                                        <t t-esc="res_company.company_details"/>
+                                    </div>
+                                    <div class="d-flex justify-content-start col row">
+                                        <t t-if="o.company_id.ei_enable">
+                                            <t t-if="o.ei_is_valid and o.ei_qr_data">
+                                                <img t-att-src="o.ei_qr_data" alt="QR Code"/>
+                                            </t>
+                                        </t>
+                                        <div class="col">
+                                            <p><strong>NIT: </strong> <t t-esc="o.company_id.vat"/></p>
+                                            <p><strong>Tipo de organización: </strong> <t t-esc="o.company_id.type_organization_id"/> </p>
+                                            <p><strong>Tipo de regimén: </strong> <t t-esc="o.company_id.type_regime_id"/></p>
+                                            <p><strong>Tipo de responsabilidad: </strong> <t t-esc="o.company_id.type_liability_id"/></p>
+                                            <p><strong>Tipo de operación: </strong> <t t-esc="o.ei_operation"/></p>
+                                            <p>Factura Electrónica de Venta <strong style="font-size: 20px"> <t t-esc="o.name"/> </strong></p>
+                                        </div>
+                                    </div>  
+                                </div>
                             </div>
-                            <div class="col">
+
+                            <div class="d-flex justify-content-start col row">
+                                <div class="col-4">
+                                    <p style="margin: 0px;">NIT: <t t-esc="o.partner_id.vat"/></p>
+                                    <p style="margin: 0px;"><t t-esc="o.partner_id.name"/></p>
+                                    <p style="margin: 0px;"><t t-esc="o.partner_id.street"/></p>
+                                    <p style="margin: 0px;"><t t-esc="o.partner_id.phone"/></p>
+                                    <p style="margin: 0px;"><t t-esc="o.partner_id.email"/></p>
+                                </div>
+                                <div class="col-8 row">
+                                    <div class="col">
+                                        <strong>Fecha de emisión:</strong>
+                                        <p><t t-esc="o.ei_issue_datetime"/></p>
+                                    </div>
+                                    <div class="col">
+                                        <strong>Fecha de expedición:</strong>
+                                        <p><t t-esc="o.ei_expedition_date"/></p>
+                                    </div>
+                                    <div class="col">
+                                        <strong>Fecha de vencimiento:</strong>
+                                        <p><t t-esc="o.invoice_date_due"/></p>
+                                    </div>
+                                    <div class="col">
+                                        <strong>Forma de pago:</strong>
+                                        <p><t t-esc="o.payment_form_id.name"/></p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col row">
                                 <table class="table">
+                                    <thead>
+                                        <tr>
+                                            <th scope="col">#</th>
+                                            <th scope="col">Descripcion</th>
+                                            <th scope="col">Cantidad</th>
+                                            <th scope="col">Precio Unitario</th>
+                                            <th scope="col">Impuestos</th>
+                                            <th scope="col">Importe</th>
+                                        </tr>
+                                    </thead>
                                     <tbody>
-                                        <tr>
-                                            <td>Moneda</td>
-                                            <td><t t-esc="o.currency_id.name"/></td>
-                                        </tr>
-                                        <tr>
-                                            <td>Total sin retenciones</td>
-                                            <td><t t-esc="o.ei_amount_total_no_withholding"/></td>
-                                        </tr>
-                                        <t t-if="tax_totals and 'subtotals' in tax_totals">
-                                            <t t-foreach="tax_totals['subtotals']" t-as="subtotal">
-                                                <tr>
-                                                    <td><t t-esc="subtotal['name']"/></td>
-                                                    <td><t t-esc="subtotal['formatted_amount']"/></td>
-                                                </tr>
-                                            </t>
-                                        </t>
-                                        <t t-if="tax_totals and 'groups_by_subtotal' in tax_totals and subtotal_to_show in tax_totals['groups_by_subtotal']">
-                                            <t t-foreach="tax_totals['groups_by_subtotal'][subtotal_to_show]" t-as="amount_by_group">
-                                                <tr>
-                                                    <td><t t-esc="amount_by_group['tax_group_name']"/></td>
-                                                    <td><t t-esc="amount_by_group['formatted_tax_group_amount']"/></td>
-                                                </tr>
-                                            </t>
-                                        </t>
-
-                                        <tr>
-                                            <td>Total</td>
-                                            <td>
-                                                <t t-if="tax_totals">
-                                                    <t t-esc="tax_totals['formatted_amount_total']"/>
-                                                </t>
-                                            </td>
-                                        </tr>
-                                        <t t-if="payments_vals">
-                                            <t t-foreach="payments_vals" t-as="payment">
-                                                <tr>
-                                                    <td><t t-esc="payment['payment_date']"/></td>
-                                                    <td><t t-esc="payment['payment_amount']"/></td>
-                                                </tr>
-                                            </t>
-                                        </t>
-                                        <t t-if="o.amount_residual">
+                                        <t t-foreach="o.invoice_line_ids" t-as="line">
                                             <tr>
-                                                <td>Importe adeudado</td>
-                                                <td><t t-esc="o.amount_residual"/></td>
+                                                <th><t t-esc="line.sequence"/></th>
+                                                <td><t t-esc="line.name"/></td>
+                                                <td><t t-esc="line.quantity"/></td>
+                                                <td><t t-esc="line.price_unit"/></td>
+                                                <td>
+                                                    <t t-foreach="line.tax_ids" t-as="tax">
+                                                        <p><t t-esc="tax.name"/></p>
+                                                    </t>
+                                                </td>
+                                                <td><t t-esc="line"/></td>
                                             </tr>
                                         </t>
                                     </tbody>
                                 </table>
                             </div>
-                        </div>
 
-                        <div class="d-flex col row">
-                            <p class="m-auto"><t t-esc="o.narration"/></p>
-                            
-                            <p style="font-size: 10px;"><strong style="font-size: 10px;"><t t-esc="o.resolution_id.resolution_type_document_id.type"/>: </strong> <t t-esc="o.ei_uuid"/></p>
+                            <div class="col row">
+                                <div class="col-7 fs-6">
+                                    <strong>Las retenciones son solo a nivel informativo.</strong>
+                                    <p><strong>Número de autorización de facturación: </strong> <t t-esc="o.resolution_id.resolution_resolution"/></p>
+                                    <p><strong>Fecha: </strong> <t t-esc="o.resolution_id.resolution_resolution_date"/></p>
+                                    <p><strong>Rango autorizado desde: </strong> <t t-esc="o.resolution_id.resolution_prefix"/> <t t-esc="o.resolution_id.resolution_from"/> <strong> a </strong> <t t-esc="o.resolution_id.resolution_prefix"/> <t t-esc="o.resolution_id.resolution_to"/></p>
+                                    <p><strong>Válido desde: </strong> <t t-esc="o.resolution_id.resolution_date_from"/> <strong> a </strong> <t t-esc="o.resolution_id.resolution_date_to"/></p>
+                                    <strong>Representación gráfica de facturación electrónica impresa por computador con software propio por <t t-esc="o.company_id.business_name"/></strong>
+                                </div>
+                                <div class="col">
+                                    <table class="table">
+                                        <tbody>
+                                            <tr>
+                                                <td>Moneda</td>
+                                                <td><t t-esc="o.currency_id.name"/></td>
+                                            </tr>
+                                            <tr>
+                                                <td>Total sin retenciones</td>
+                                                <td><t t-esc="o.ei_amount_total_no_withholding"/></td>
+                                            </tr>
+                                            <t t-if="tax_totals and 'subtotals' in tax_totals">
+                                                <t t-foreach="tax_totals['subtotals']" t-as="subtotal">
+                                                    <tr>
+                                                        <td><t t-esc="subtotal['name']"/></td>
+                                                        <td><t t-esc="subtotal['formatted_amount']"/></td>
+                                                    </tr>
+                                                </t>
+                                            </t>
+                                            <t t-if="tax_totals and 'groups_by_subtotal' in tax_totals and subtotal_to_show in tax_totals['groups_by_subtotal']">
+                                                <t t-foreach="tax_totals['groups_by_subtotal'][subtotal_to_show]" t-as="amount_by_group">
+                                                    <tr>
+                                                        <td><t t-esc="amount_by_group['tax_group_name']"/></td>
+                                                        <td><t t-esc="amount_by_group['formatted_tax_group_amount']"/></td>
+                                                    </tr>
+                                                </t>
+                                            </t>
+
+                                            <tr>
+                                                <td>Total</td>
+                                                <td>
+                                                    <t t-if="tax_totals">
+                                                        <t t-esc="tax_totals['formatted_amount_total']"/>
+                                                    </t>
+                                                </td>
+                                            </tr>
+                                            <t t-if="payments_vals">
+                                                <t t-foreach="payments_vals" t-as="payment">
+                                                    <tr>
+                                                        <td><t t-esc="payment['payment_date']"/></td>
+                                                        <td><t t-esc="payment['payment_amount']"/></td>
+                                                    </tr>
+                                                </t>
+                                            </t>
+                                            <t t-if="o.amount_residual">
+                                                <tr>
+                                                    <td>Importe adeudado</td>
+                                                    <td><t t-esc="o.amount_residual"/></td>
+                                                </tr>
+                                            </t>
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+
+                            <div class="d-flex col row">
+                                <p class="m-auto"><t t-esc="o.narration"/></p>
+                                
+                                <p style="font-size: 10px;"><strong style="font-size: 10px;"><t t-esc="o.resolution_id.resolution_type_document_id.type"/>: </strong> <t t-esc="o.ei_uuid"/></p>
+                            </div>
                         </div>
                     </div>
                 </t>
