--- a/invoice_report/views/report_invoice_with_payments.xml
+++ b/invoice_report/views/report_invoice_with_payments.xml
@@ -30,7 +30,7 @@
 
                     <div class="container-fluid">
                         <header class="d-flex justify-content-start row" style="height: 150px;">
-                           <img t-att-src="'/web/image/company/%s/logo' % o.company_id.id" alt="Logo"/>
+                            <t style="width: 120px; height: 120px" t-esc="res_company.logo_web"/>
 
                             <div class="d-flex justify-content-start col row">
                                 <div class="col-4">
