--- a/invoice_report/views/report_invoice_with_payments.xml
+++ b/invoice_report/views/report_invoice_with_payments.xml
@@ -37,9 +37,9 @@
                                     <t t-esc="res_company.company_details"/>
                                 </div>
                                 <div class="d-flex justify-content-start col row">
-                                    <t t-if="o.company_id.ei_enable">
-                                        <t t-if="o.ei_is_valid and o.ei_qr_data">
-                                            <img t-att-src="o.ei_qr_data" alt="QR Code"/>
+                                    <t t-if="ei_header and ei_qr">
+                                        <t t-esc="ei_header">
+                                            <t t-esc="ei_qr" />
                                         </t>
                                     </t>
                                     <div class="col">
@@ -57,7 +57,7 @@
                         <div class="container-fluid">
                             <div class="d-flex justify-content-start col row">
                                 <div class="col-4">
-                                    <p style="margin: 0px;">NIT: <t t-esc="o.partner_id.vat"/></p>
+                                    <p style="margin: 0px;">NIT: <t t-esc="o.partner_id"/></p>
                                     <p style="margin: 0px;"><t t-esc="o.partner_id.name"/></p>
                                     <p style="margin: 0px;"><t t-esc="o.partner_id.street"/></p>
                                     <p style="margin: 0px;"><t t-esc="o.partner_id.phone"/></p>
